still trying to fix problems with aligning top bar

--- a/paperclip_styling.css
+++ b/paperclip_styling.css
@@ -14,13 +14,16 @@
     float: center;
 }
 
-#topBar {
+.topBar {
     display: flex;
     position: absolute;
-    left: 0px;
-    top: 0px;
-    height: 32px;
-    width: 100%
+    height: 50px;
+    width: 100%;
+    background-color: lavender;
+}
+
+.topInfo {
+    align-items: center;
 }
 .top{
     float: top;
